--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -70,7 +70,7 @@ We sit on the verge of the exa-scale revolution both in terms of computing \cite
 \begin{figure}
 	\centering
 	\includegraphics[width=\linewidth]{figures/intro/laser_systems}
-	\caption[Laser systems across the globe, both commissioned and theorised.]{A by no means exhaustive plot of laser systems across the globe, both commissioned and theorised \cite{stricklandCompressionAmplifiedChirped1985, fourmauxPedestalCleaningHigh2011, wang085PWLaser2017, tiscarenoOhioStateUniversity2020, sung42PW202017, rossGenerationTerawattPulses2000, yangMultiterawattLaserSystem2002, witte2006source, stoecklHighEnergyPetawattProject2006, lozhkarevCompact56Petawatt2007, herrmannGenerationSubthreecycle162009, andriukaitis90GWPeak2011, zhaoGeneration120GW2013, hoppsOverviewLaserSystems2013, hoppsOverviewLaserSystems2013, thire10MJ5cycle2015, yinHighefficiencyOpticalParametric2016, galesExtremeLightInfrastructure2018, OMEGAFacility, renCompactDoublepassRaman2008, lanciaExperimentalEvidenceShort2010, lanciaSignaturesSelfSimilarRegime2016, marquesJouleLevelHighEfficiencyEnergy2019, thebergeTunableUltrashortLaser2006, trushinSub10fsSupercontinuumRadiation2007, ohIntenseTerahertzGeneration2013, horioGenerationSub17Fs2014, takahashiGeneration10uJCoherent2002, goulielmakisSingleCycleNonlinearOptics2008, skantzakisCoherentContinuumExtreme2009, ferrariHighenergyIsolatedAttosecond2010, takahashiAttosecondNonlinearOptics2013, popmintchevUltravioletSurpriseEfficient2015, nomuraAttosecondPhaseLocking2009, bierbachGeneration10Relativistic2012, heisslerMultimJHarmonicEmission2015, yeungExperimentalObservationAttosecond2017, jahnIntenseIsolatedAttosecond2019, rusEfficientHighbrightnessSoftxray1997, sebbanFullCharacterizationHighgain2000, rusMultimillijouleHighlyCoherent2002, zeitounHighintensityHighlyCoherent2004, wangHighBrightnessInjectionSeededSoftXRayLaser2006, rohringerAtomicInnershellXray2012, ayvazyanFirstOperationFreeelectron2006, ackermannOperationFreeelectronLaser2007, emmaFirstLasingOperation2010, FlashFreeElectronLaser, FlashFreeElectronLaser, FELIXLaboratoryOverview, FELIXLaboratoryOverview, FELIXLaboratoryOverview, kneipObservationSynchrotronRadiation2008, kneipBrightSpatiallyCoherent2010, juEnhancementXraysGenerated2012, chenBrightBetatronXray2013, wangQuasimonoenergeticLaserplasmaAcceleration2013, coleLaserwakefieldAcceleratorsHard2015, wenzQuantitativeXrayPhasecontrast2015, taphuocAllopticalComptonGammaray2012, chenMeVEnergyRaysInverse2013, tsaiCompactTunableCompton2015, polyanskiyPicosecondPulseAmplification2011, haberbergerFifteenTerawattPicosecond2010, glowniaAmplification193nmFemtosecond1992, kandoEnhancementPhotonNumber2009, obenschainHighenergyKryptonFluoride2015, trinesSimulationsEfficientRaman2011, trinesSimulationsEfficientRaman2011, kawanakaConceptualDesignSubexawatt2016, tajimaMarriage20keVSuperconducting2018, NetElectricityConsumption, umstadterRelativisticLaserPlasma2003a} to provide an overview of the parameter space currently and soon to be accessible. The experimental result obtained at the ORION laser facility \cite{hoppsOverviewLaserSystems2013} is presented, and will be discussed in detail in chapter \ref{ch:3-ORION}. The dashed orange line is the accompanying theoretical prediction. The red dashed line indicates the parameter space accessible via the methods discussed in this thesis when coupled with a sub-etawatt Raman amplified laser beam. Such a beam would provide intensities in the water window many orders of magnitude beyond that currently accessible in state-of-the-art facilities. }
+	\caption[Laser systems across the globe, both commissioned and theorised.]{A by no means exhaustive plot of laser systems across the globe, both commissioned and theorised \cite{stricklandCompressionAmplifiedChirped1985, fourmauxPedestalCleaningHigh2011, wang085PWLaser2017, tiscarenoOhioStateUniversity2020, sung42PW202017, rossGenerationTerawattPulses2000, yangMultiterawattLaserSystem2002, witte2006source, stoecklHighEnergyPetawattProject2006, lozhkarevCompact56Petawatt2007, herrmannGenerationSubthreecycle162009, andriukaitis90GWPeak2011, zhaoGeneration120GW2013, hoppsOverviewLaserSystems2013, hoppsOverviewLaserSystems2013, thire10MJ5cycle2015, yinHighefficiencyOpticalParametric2016, galesExtremeLightInfrastructure2018, OMEGAFacility, renCompactDoublepassRaman2008, lanciaExperimentalEvidenceShort2010, lanciaSignaturesSelfSimilarRegime2016, marquesJouleLevelHighEfficiencyEnergy2019, thebergeTunableUltrashortLaser2006, trushinSub10fsSupercontinuumRadiation2007, ohIntenseTerahertzGeneration2013, horioGenerationSub17Fs2014, takahashiGeneration10uJCoherent2002, goulielmakisSingleCycleNonlinearOptics2008, skantzakisCoherentContinuumExtreme2009, ferrariHighenergyIsolatedAttosecond2010, takahashiAttosecondNonlinearOptics2013, popmintchevUltravioletSurpriseEfficient2015, nomuraAttosecondPhaseLocking2009, bierbachGeneration10Relativistic2012, heisslerMultimJHarmonicEmission2015, yeungExperimentalObservationAttosecond2017, jahnIntenseIsolatedAttosecond2019, rusEfficientHighbrightnessSoftxray1997, sebbanFullCharacterizationHighgain2000, rusMultimillijouleHighlyCoherent2002, zeitounHighintensityHighlyCoherent2004, wangHighBrightnessInjectionSeededSoftXRayLaser2006, rohringerAtomicInnershellXray2012, ayvazyanFirstOperationFreeelectron2006, ackermannOperationFreeelectronLaser2007, emmaFirstLasingOperation2010, FlashFreeElectronLaser, FlashFreeElectronLaser, FELIXLaboratoryOverview, FELIXLaboratoryOverview, FELIXLaboratoryOverview, kneipObservationSynchrotronRadiation2008, kneipBrightSpatiallyCoherent2010, juEnhancementXraysGenerated2012, chenBrightBetatronXray2013, wangQuasimonoenergeticLaserplasmaAcceleration2013, coleLaserwakefieldAcceleratorsHard2015, wenzQuantitativeXrayPhasecontrast2015, taphuocAllopticalComptonGammaray2012, chenMeVEnergyRaysInverse2013, tsaiCompactTunableCompton2015, polyanskiyPicosecondPulseAmplification2011, haberbergerFifteenTerawattPicosecond2010, glowniaAmplification193nmFemtosecond1992, kandoEnhancementPhotonNumber2009, obenschainHighenergyKryptonFluoride2015, trinesSimulationsEfficientRaman2011, trinesSimulationsEfficientRaman2011, kawanakaConceptualDesignSubexawatt2016, tajimaMarriage20keVSuperconducting2018, NetElectricityConsumption, umstadterRelativisticLaserPlasma2003a, dollarEnhancedLaserAbsorption2017} to provide an overview of the parameter space currently and soon to be accessible. The experimental result obtained at the ORION laser facility \cite{hoppsOverviewLaserSystems2013} is presented, and will be discussed in detail in chapter \ref{ch:3-ORION}. The dashed orange line is the accompanying theoretical prediction. The red dashed line indicates the parameter space accessible via the methods discussed in this thesis when coupled with a sub-etawatt Raman amplified laser beam. Such a beam would provide intensities in the water window many orders of magnitude beyond that currently accessible in state-of-the-art facilities. }
 	\label{fig:intro_lasersystems}
 \end{figure}
 
@@ -103,6 +103,23 @@ The electromagnetic fields can be obtained from the scalar, $\phi$, and vector, 
 \begin{equation}
 	\mathbf{B} = \nabla \times \mathbf{A}.
 \end{equation}
+
+\subsubsection{The Vlasov-Maxwell system of equations}
+A collisionless and fully ionised plasma is fully described in the kinetic description by the Vlasov-Maxwell system of equations \cite{derouillatSmileiCollaborativeOpensource2018}. Each plasma species, $s$, of particles with mass $m_s$ and charge $q_s$ is described by its distribution function $f_s(t,\mathbf{x},\mathbf{p})$ at time $t$, position $\mathbf{x}$ and momentum $\mathbf{p} = m_s \gamma \mathbf{v}$. The distribution satisfies the Vlasov equation, that is,
+\begin{equation}\label{eq:intro-vlasov}
+	(\partial_t + \frac{\mathbf{p}}{m_s\gamma} \cdot \nabla + \mathbf{F}_\mathrm{L} \cdot \nabla_\mathbf{p})f_s = 0,
+\end{equation}
+where $\mathbf{F}_\mathrm{L}$ is the Lorentz force given in equation \ref{eq:intro-Lorentz_force}. The electric $\mathbf{E}(t,\mathbf{x})$ and magnetic $\mathbf{B}(t,\mathbf{x})$ fields that generate the force must satisfy Maxwell's equations (equations \ref{eq:intro-maxwell}).
+
+This self-consistent system of equations describes the dynamics of plasma particles within electromagnetic fields. The particles modify the fields via their charge and current densities,
+\begin{equation}
+	\rho(t,\mathbf{x}) = \sum_s q_s \int d^3pf_s(t,\mathbf{x},\mathbf{p}),
+\end{equation}
+and 
+\begin{equation}
+	\mathbf{J}(t,\mathbf{x}) = \sum_s q_s \int d^3p\mathbf{v}f_s(t,\mathbf{x},\mathbf{p}),
+\end{equation}
+respectively.
 
 \section{\label{sec:plasma_def}The definition of a plasma}
 As outlined in F. Chen's definitive textbook `Introduction to Plasma Physics and Controlled Fusion' \cite{chenIntroductionPlasmaPhysics2016}, a plasma must fulfil three criteria, namely,
@@ -311,11 +328,42 @@ Equation \ref{eq:intro-wave_equation} can then be solved to yield
 \end{equation}
 where $t_\mathrm{a} = t- |\mathbf{x}-\mathbf{x}'|/c$ is the advanced time.
 
-\subsection{Relativistic similarity theory}
-Relativistic effects occur. Intruce the normalised a0, then introduce the S
+\subsection{Ultra-relativistic similarity theory}
+Consider a relativistically intense laser pulse normally incident on a collisionless plasma as in figure \ref{fig:introplasmafrequency} and neglect ion motion. The electron distribution is fully described by the Vlasov equation (equation \ref{eq:intro-vlasov}) with the self-consistent electric and magnetic fields satisfying Maxwell's equations (equations \ref{eq:intro-maxwell}). Suppose the incident laser pulse has an initial vector potential 
+\begin{equation}
+	\mathbf{A}(t=0) = \mathbf{a}((y^2+z^2)/R^2,x/c\tau)\cos k_\mathrm{L}x.
+\end{equation}
+This envelope form for the potential, $\mathbf{a}((y^2+z^2)/R^2,x/c\tau)$, is sensible provided $k_\mathrm{L}R \gg 1$ and $\omega_\mathrm{L}\tau \gg 1$, where $R$ is the focal spot radius and $\tau$ the pulse duration. For fixed laser envelope, the laser-plasma dynamics depends on just four dimensionless variables:  the normalised focal spot size, $k_\mathrm{L} R$, the normalised pulse duration, $\omega_\mathrm{L}\tau$, the normalised laser vector potential amplitude
+\begin{equation}
+	a_0 = \mathrm{max}\left|\frac{e \mathbf{a} }{m_\mathrm{e} c^2 }\right|,
+\end{equation}
+in terms of the peak laser electric field amplitude $\mathbf{E}_\mathrm{L}$,
+\begin{equation}
+	a_0 = \frac{e|\mathbf{E}_\mathrm{L}|}{m_\mathrm{e} c\omega_\mathrm{L}},
+\end{equation}
+and the normalised plasma density
+\begin{equation}
+	\bar{n}_\mathrm{e} = \frac{n_\mathrm{e}}{n_\mathrm{c}}.
+\end{equation}
+By normalising the system of equations, details given in appendix, and combining these last two expressions into the \textit{relativistic similarity parameter},
+\begin{equation}
+	S = \frac{\bar{n}_\mathrm{e}}{a_0},
+\end{equation}
+it is possible to show that in the ultra-relativistic limit ($a_0 \gg 1$), the dynamics of the system is similar for constant $S$ \cite{gordienkoScalingsUltrarelativisticLaser2005} with plasma electrons following similar trajectories where 
+\begin{equation}\label{eq:intro-p_similarity}
+	\mathbf{p} \sim a_0.
+\end{equation}
+There is also a more physical meaning to the $S$ parameter. Consider again section \ref{sec:intro-lasersolidplasma_linear} on the propagation of linear electromagnetic waves through a plasma but now for the case of an ultra-relativistic laser pulse. For an electron rotating in an electromagnetic field,
+\begin{equation}
+	\mathbf{F}_\perp = \gamma m_e \mathbf{a}_\perp,
+\end{equation}
+where $ \mathbf{a}_\perp$ is the acceleration perpendicular to the motion and thus the response of the electrons is reduced by a factor of $\gamma$. While some find the \textit{relativistic mass} correction to be somewhat unhelpful nomenclature for the phenomenon \cite{steaneRelativityMadeRelatively2012}, it has nevertheless become commonplace within the literature of relativistic plasma physics \cite{umstadterRelativisticLaserPlasma2003a}. Turning the handle, one finds that the relativistic plasma frequency is
+\begin{equation}
+	\omega_\mathrm{p}^\mathrm{rel} = \sqrt{\frac{e^2n_\mathrm{e}}{\gamma m_\mathrm{e} \epsilon_0}}.
+\end{equation}
+Using equation \ref{eq:intro-p_similarity}, and taking $v \approx c$, then $\gamma \approx a_0$ and the normalised relativistic cutoff density is simply $S$. Thus, the ultra-relativistic similarity parameter is just a measure of the overdensity of a plasma once relativistic corrections have been applied, \textit{i.e.} for $S>1$, a laser pulse will be reflection, however for $\bar{n}_\mathrm{e} > 1$ and $S <1$, one enters the regime of relativistically self-induced transparency \cite{ereminRelativisticSelfInducedTransparency2010}. It is now possible to define the parameter space of interest in this thesis: relativistic laser plasma surface interactions occur for $a_0 \gg 1$ and $S > 1$.
 
-
-
+\subsection{Relativistic lasers and plasmas}
 The descriptor \textit{relativistic} is applied liberally in this thesis. When applied to electromagnetic fields or laser pulses it refers to 
 \begin{equation}
 	a_0 \ge 1.
@@ -324,7 +372,7 @@ When applied to particles, their Lorentz factors are
 \begin{equation}
 	\gamma = \frac{1}{\sqrt{1-\beta^2}} \ge 2,
 \end{equation}
-corresponding to a speed, $u \ge 0.87 c$. A relativistic laser pulse will accelerate electrons to relativistic velocities in a fraction of a laser pulse cycle. Consider an electron in the presence of a uniform electric field of magnitude $a_0 = 100$, an intensity accessible by current state of the art laser facilities. The work done on that particle by the field is 
+corresponding to a speed, $u \ge 0.87 c$. \textit{Ultra-relativistic} implies these quantities are much larger than the conditions provided. A relativistic laser pulse will accelerate electrons to relativistic velocities in a fraction of a laser pulse cycle. Consider an electron in the presence of a uniform electric field of magnitude $a_0 = 100$, an intensity accessible by current state of the art laser facilities. The work done on that particle by the field is 
 \begin{equation}
 	T = (\gamma -1)m_\mathrm{e}c^2 = \int \mathbf{E}\cdot \mathrm{d} \mathbf{x},
 \end{equation}
@@ -356,7 +404,7 @@ Consider a linearly polarised Gaussian laser pulse, with axis of polarisation al
 \begin{equation}\label{eq:intro-transverse_momentum_conservation_no_initial_momentum}
 	p_\mathrm{T} = eA,
 \end{equation}
-where $p_\mathrm{T}$ is the electron momentum along the polarisation axis of the laser pulse and $A$ it the laser pulse 3-vector potential amplitude.
+where $p_\mathrm{T}$ is the electron momentum along the polarisation axis of the laser pulse and $A$ it the laser pulse 3-vector potential amplitude. As a sanity check, this expression complies with the ultra-relativistic similarity result of equation \ref{eq:intro-p_similarity}.
 
 Note that this is only valid provided the electron does not radiate along the direction of polarisation as discussed by Sokolov \textit{et al} \cite{sokolovDynamicsEmittingElectrons2009}. The implications of \textit{Radiation Reaction }are discussed in the following section.
 
@@ -406,23 +454,6 @@ Modelling laser-plasma interactions is a notoriously challenging endeavour; due 
 Modern \ac{HPC} systems are poised to enter the exascale regime ($> 10^{18}$ Floating Point Operations Per Second). With limited improvements in microprocessor technologies, such power is achieved through massive parallelisation across processing units. To enable the study of the dynamics of up to billions of macroparticles, PIC codes test the limits of current supercomputing architectures. ARCHER2, the UK's national supercomputer came online in November 2021, with it delivering over ten times the reseources of its predecessor (ARCHER) \cite{ARCHER2}. An HPE Cray EX supercomputing system with a peak performance estimated at \qty{28}{Pflops.s^{-1}} across 5860 nodes each with dual AMD EPYCTM 7742 64-core processor for a total of 750,080 cores, ARCHER2 was able to supply the resources required to run the costly PIC simulations for this research. The substantially cheaper HYADES simulations were performed using the Rutherford Appleton Laboratory's SCARF \ac{HPC} cluster \cite{SCARFOverview}.
 
 \subsection{Particle-In-Cell codes}
-\subsubsection{The Vlasov-Maxwell system of equations}
-A collisionless and fully ionised plasma is fully described in the kinetic description by the Vlasov-Maxwell system of equations \cite{derouillatSmileiCollaborativeOpensource2018}. Each plasma species, $s$, of particles with mass $m_s$ and charge $q_s$ is described by its distribution function $f_s(t,\mathbf{x},\mathbf{p})$ at time $t$, position $\mathbf{x}$ and momentum $\mathbf{p} = m_s \gamma \mathbf{v}$. The distribution satisfies the Vlasov equation, that is,
-\begin{equation}
-	(\partial_t + \frac{\mathbf{p}}{m_s\gamma} \cdot \nabla + \mathbf{F}_\mathrm{L} \cdot \nabla_\mathbf{p})f_s = 0,
-\end{equation}
-where $\mathbf{F}_\mathrm{L}$ is the Lorentz force given in equation \ref{eq:intro-Lorentz_force}. The electric $\mathbf{E}(t,\mathbf{x})$ and magnetic $\mathbf{B}(t,\mathbf{x})$ fields that generate the force must satisfy Maxwell's equations (equations \ref{eq:intro-maxwell}).
-
-This self-consistent system of equations describes the dynamics of plasma particles within electromagnetic fields. The particles modify the fields via their charge and current densities,
-\begin{equation}
-	\rho(t,\mathbf{x}) = \sum_s q_s \int d^3pf_s(t,\mathbf{x},\mathbf{p}),
-\end{equation}
-and 
-\begin{equation}
-	\mathbf{J}(t,\mathbf{x}) = \sum_s q_s \int d^3p\mathbf{v}f_s(t,\mathbf{x},\mathbf{p}),
-\end{equation}
-respectively.
-
 \subsubsection{Discretisation of the Vlasov-Maxwell equations}
 Finding numerical solutions to the Vlasov-Maxwell equations is no straightforward task, while codes exist that are capable, such as Valis \cite{sircombeVALISSplitconservativeScheme2009}, the requirement of high resolution in both position and momentum is exceedingly costly and the use of such codes is limited with respect to their size, duration and spatial dimensions. A more tractable approach is to discretise the distribution function into $N_s$ \textit{quasi-particles}\footnote{Originally introduced by Langdon and Birdsall as \textit{clouds} \cite{langdonTheoryPlasmaSimulation1970}.} . These are often referred to as \textit{macro-particles} in practice and typically represent a large number of real particles, such that
 \begin{equation}
@@ -449,18 +480,8 @@ with electric fields defined at integer time steps and magnetic fields at half-i
 \subsubsection{Smilei}
 Smilei (for Simulating Matter Irradiated by Light at Extreme Intensities) is a modern collaborative, massively-parallel, fully relativistic and open source plasma physics PIC code and the major workhorse for this thesis\footnote{At points benchmarks agaist the EPOCH and Osiris PIC codes were performed.}. Produced by M. Grech's team(CHECK THIS) at École Polytechnique \cite{derouillatSmileiCollaborativeOpensource2018}, its recent development was motivated by the rapid advancements of multi-petawatt facilities both globally and locally with the recent completion of the 10 PW Apollon laser facility and by the availability of supercomputing power which has `skyrocketed' in recent years \cite{derouillatSmileiCollaborativeOpensource2018}. Indeed, the 3D \ac{PIC} simulations discussed in this thesis required the parallelisation of almost 20 \% of the computing resources available on ARCHER2.
 
-
-\subsubsection{Reference quantities}
-This needs rewording so as not to be the same as paper.
-
-%With the vast range of magnitudes associated with multi-petawatt and femtosecond laser pulses, solid density plasmas, micrometre wavelengths and attosecond bunches, it is much more efficient to convert to dimensionless normalised quantities. The standard four that describe the dynamics of the system \cite{BOUCHARD THESIS??} correspond directly to each of these. The three asso- ciated with the laser are: the temporal parameter, ωLτ, where τ is the pulse duration, the spatial parameter, λL/R, where λL is the wavelength and R the beam width, and the intensity parameter, the normalised vector po- tential, a0 = eEL/(mecωL), where EL is the peak laser electric field strength, and e and me are the charge and mass of an electron.
-%For the plasma, the key parameter is the density rel- ative to the critical density, n ̄e = ne/nc, here ne is the electron density and nc = ε0 me ωL2 /e2 is the critical den- sity at which the plasma becomes opaque to the laser electric field, assuming relativistic effects can be ignored.
-%Relativistic similarity theory states that the laser- plasma interaction does not depend on n ̄e and a0 inde- pendently but via the relativistic similarity parameter
-%S=n ̄e, (1) a0
-%essentially accounting for relativistic effects in the over- density of the plasma. Previous work on the ZVP mech- anism has suggested that the ZVP regime is valid for relativistic interactions, a0 > 1, with S ≥ 1. For S < 1, the onset of relativistically self-induced transparency ef- fects [42] renders the model invalid. Equally, for large a0, the onset of QED effects should cause breakdown of rel- ativistic similarity. Here the validity of the ZVP model is tested across this parameter space for the first time.
-
 \subsubsection{Reference units}
-To great convenience, Smilei operates in normalised units. This normalisation is not chosen \textit{a priori}, instead results can be scaled by an arbitrary reference angular frequency. This is extremely useful when working with boosted frames of reference. As this thesis focuses on the interaction of a laser pulse with plasma, the laser pulse angular frequency, $\omega_\mathrm{L}$ is set as the frequency of reference. A list of the most common normalisations are given in table \ref{tab:intro-normalisations}.
+Given the broad range of magnitudes linked to multi-petawatt and femtosecond laser pulses, solid density plasmas, micrometer wavelengths, and attosecond electron bunches, it becomes significantly more convenient to transform them into dimensionless normalised values. Smilei operates in such units. This normalisation is not chosen \textit{a priori}, instead results can be scaled by an arbitrary reference angular frequency. This is extremely useful when working with boosted frames of reference. As this thesis focuses on the interaction of a laser pulse with plasma, the laser pulse angular frequency, $\omega_\mathrm{L}$ is set as the frequency of reference. A list of the most common normalisations are given in table \ref{tab:intro-normalisations}.
 
 \begin{table}
 \begin{center}
@@ -487,7 +508,7 @@ To great convenience, Smilei operates in normalised units. This normalisation is
 
 \subsubsection{General simulation parameters}\label{sec:intro-general_simulation_paramers}
 \textbf{Boundary conditions}
-\textit{Silver-M$\ddot{\mathrm{u}}$ller }boundary conditions for the simulation box edges \textbf{cite - H Barucq Asymptomatic analysis 1997}. These are able to absorp and inject electromagnetic waves and particles. Note that there can be non-physical reflection of electromagnetic waves at such boundaries leading to error.
+\textit{Silver-M$\ddot{u}$ller }boundary conditions for the simulation box edges \textbf{cite - H Barucq Asymptomatic analysis 1997}. These are able to absorp and inject electromagnetic waves and particles. Note that there can be non-physical reflection of electromagnetic waves at such boundaries leading to error.
 
 \textbf{Shape function} The quasi-particle shape function $S(\mathbf{x})$ describes how to project charge onto the grid. It is symmetric in all dimensions with respect to $\mathbf{x}$ and extends over $n$ cells of width $\Delta x$ in each direction where $n$ is the interpolation order. It can be written as a product across $D$ dimensions,
 \begin{equation}
