--- a/references.bib
+++ b/references.bib
@@ -1228,6 +1228,22 @@
   file = {/Users/timmis/Zotero/storage/2GZXVKLH/Gordienko et al. - 2004 - Relativistic Doppler Effect Universal Spectra and.pdf}
 }
 
+@article{gordienkoScalingsUltrarelativisticLaser2005,
+  title = {Scalings for Ultrarelativistic Laser Plasmas and Quasimonoenergetic Electrons},
+  author = {Gordienko, S. and Pukhov, A.},
+  year = {2005},
+  month = apr,
+  journal = {Physics of Plasmas},
+  volume = {12},
+  number = {4},
+  pages = {043109},
+  issn = {1070-664X, 1089-7674},
+  doi = {10.1063/1.1884126},
+  urldate = {2023-09-28},
+  langid = {english},
+  file = {/Users/timmis/Zotero/storage/TH3YSYIT/Gordienko and Pukhov - 2005 - Scalings for ultrarelativistic laser plasmas and q.pdf}
+}
+
 @article{gordonSpecialUnitaryParticle2021,
   title = {Special Unitary Particle Pusher for Extreme Fields},
   author = {Gordon, D. F. and Hafizi, B.},
